crates/uitest/fixtures/mir_check/move_use_after_branch.snap
---
source: crates/uitest/tests/mir_check.rs
expression: res
input_file: fixtures/mir_check/move_use_after_branch.fe
---
error[11-0002]: move conflict in `fn move_use_after_branch`
   ┌─ move_use_after_branch.fe:10:5
   │
 8 │         consume(x)
   │                 - `x` is moved here
 9 │     }
10 │     x.v
   │     ^^^ cannot use a value after it was moved
